Add Router and Feeder requests to dashboard

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -269,6 +269,10 @@ Outputs:
     Value: !GetAtt DovetailRouterStack.Outputs.VanityAlbDomain
   DovetailAlbName:
     Value: !GetAtt DovetailRouterStack.Outputs.AlbName
+  DovetailAlbFullName:
+    Value: !GetAtt DovetailRouterStack.Outputs.AlbFullName
+  DovetailTargetGroupFullName:
+    Value: !GetAtt DovetailRouterStack.Outputs.TargetGroupFullName
 
   MetricsTargetGroupFullName:
     Value: !GetAtt MetricsStack.Outputs.TargetGroupFullName
