--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -1074,3 +1074,9 @@ Outputs:
     Description: >-
       The full name of the load balancer. For example, my-load-balancer
     Value: !GetAtt Alb.LoadBalancerName
+  AlbFullName:
+    Description: >-
+      The full name of the load balancer. For example, my-load-balancer
+    Value: !GetAtt Alb.LoadBalancerFullName
+  TargetGroupFullName:
+    Value: !GetAtt TargetGroup.TargetGroupFullName
