--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -1006,3 +1006,10 @@ Outputs:
     Description: >-
       The full name of the load balancer. For example, my-load-balancer
     Value: !GetAtt Alb.LoadBalancerName
+  WebTargetGroupFullName:
+    Value: !GetAtt WebTargetGroup.TargetGroupFullName
+  AlbFullName:
+    Description: >-
+      The full name of the load balancer. For example,
+      app/my-load-balancer/50dc6c495c0c9188
+    Value: !GetAtt Alb.LoadBalancerFullName
