--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -43,10 +43,14 @@ Parameters:
   CmsTargetGroupFullName: { Type: String }
 
   DovetailAlbName: { Type: String }
+  DovetailAlbFullName: { Type: String }
   DovetailVanityAlbDomain: { Type: String }
+  DovetailTargetGroupFullName: { Type: String }
 
   FeederAlbName: { Type: String }
+  FeederAlbFullName: { Type: String }
   FeederVanityAlbDomain: { Type: String }
+  FeederWebTargetGroupFullName: { Type: String }
 
   IdTargetGroupFullName: { Type: String }
 
@@ -126,6 +130,8 @@ Resources:
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${AuguryTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Augury" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CastleTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Castle" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CmsTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "CMS" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${DovetailTargetGroupFullName}", "LoadBalancer", "${DovetailAlbFullName}", { "label": "Dovetail-Router" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${FeederWebTargetGroupFullName}", "LoadBalancer", "${FeederAlbFullName}", { "label": "Feeder" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IdTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "ID" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IframelyTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Iframely" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${MetricsTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Metrics" } ],
