--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1166,10 +1166,14 @@ Resources:
         CmsTargetGroupFullName: !GetAtt Apps100AStack.Outputs.CmsTargetGroupFullName
 
         DovetailAlbName: !GetAtt Apps300AStack.Outputs.DovetailAlbName
+        DovetailAlbFullName: !GetAtt Apps300AStack.Outputs.DovetailAlbFullName
         DovetailVanityAlbDomain: !GetAtt Apps300AStack.Outputs.DovetailVanityAlbDomain
+        DovetailTargetGroupFullName: !GetAtt Apps300AStack.Outputs.DovetailTargetGroupFullName
 
         FeederAlbName: !GetAtt Apps200AStack.Outputs.FeederAlbName
+        FeederAlbFullName: !GetAtt Apps200AStack.Outputs.FeederAlbFullName
         FeederVanityAlbDomain: !GetAtt Apps200AStack.Outputs.FeederVanityAlbDomain
+        FeederWebTargetGroupFullName: !GetAtt Apps200AStack.Outputs.FeederWebTargetGroupFullName
 
         IdTargetGroupFullName: !GetAtt Apps100AStack.Outputs.IdTargetGroupFullName
 
