Enable new feeder worker

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -89,9 +89,7 @@ Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
-  # TODO: re-enable when we move off the old stacks
-  # EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
-  EnableWorkers: !Equals ["true", "false"]
+  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
 
 Resources:
   Constants:
@@ -911,7 +909,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: !If [IsProduction, 1, 0] # TODO
+      DesiredCount: 1
       EnableECSManagedTags: true
       PropagateTags: TASK_DEFINITION
       Tags:
