Add log groups resource group

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1150,6 +1150,7 @@ Resources:
         SharedRedisReplicationGroupName: !GetAtt SharedRedisStack.Outputs.ReplicationGroupName
 
         StackResourceGroupName: !GetAtt ResourceGroupsStack.Outputs.StackResourceGroupName
+        StackLogGroupsGroup: !GetAtt ResourceGroupsStack.Outputs.StackLogGroupsGroup
 
         SharedVpcFlowLogsLogGroupName: !GetAtt SharedVpcStack.Outputs.FlowLogsLogGroupName
 
