--- a/stacks/resource-groups.yml
+++ b/stacks/resource-groups.yml
@@ -13,7 +13,7 @@ Resources:
     Type: AWS::ResourceGroups::Group
     Properties:
       Description: >-
-        Inlcudes all supported resources that belong to the root stack
+        Includes all supported resources descendent from root stack
       Name: !Sub ${RootStackName}
       ResourceQuery:
         Query:
@@ -28,7 +28,7 @@ Resources:
     Type: AWS::ResourceGroups::Group
     Properties:
       Description: >-
-        Inlcudes all EC2 instances that belong to the root stack
+        Includes all EC2 instances descendent from root stack
       Name: !Sub ${RootStackName}-ec2-instances
       ResourceQuery:
         Query:
@@ -43,7 +43,7 @@ Resources:
     Type: AWS::ResourceGroups::Group
     Properties:
       Description: >-
-        Inlcudes all ACM certificates that belong to the root stack
+        Includes all ACM certificates descendent from root stack
       Name: !Sub ${RootStackName}-certificates
       ResourceQuery:
         Query:
@@ -54,7 +54,24 @@ Resources:
               Values:
                 - !Ref RootStackName
         Type: TAG_FILTERS_1_0
+  StackLogGroupsGroup:
+    Type: AWS::ResourceGroups::Group
+    Properties:
+      Description: >-
+        Inlcudes all CloudWatch Logs log groups descendent from root stack
+      Name: !Sub ${RootStackName}-log-groups
+      ResourceQuery:
+        Query:
+          ResourceTypeFilters:
+            - AWS::Logs::LogGroup
+          TagFilters:
+            - Key: prx:cloudformation:root-stack-name
+              Values:
+                - !Ref RootStackName
+        Type: TAG_FILTERS_1_0
 
 Outputs:
   StackResourceGroupName:
     Value: !Ref StackResourceGroup
+  StackLogGroupsGroupName:
+    Value: !Ref StackLogGroupsGroup
