--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -269,7 +269,7 @@ Resources:
   CountsFunctionLoggedWarnAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Dovetail-Counts] Lambda function <${EnvironmentTypeAbbreviation}> LOGGED WARNS (${RootStackName})
+      AlarmName: !Sub WARN [Dovetail-Counts] Lambda function <${EnvironmentTypeAbbreviation}> LOGGED WARNS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Dovetail Counts Lambda function has logged some
         warnings, which could indicate invalid input data or less important
