--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -218,7 +218,7 @@ Resources:
           Type: AAAA
           Name: !Sub sitemap.${Domain}
 
-  Embed:
+  Embed: # This is for Iframely
     Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: Embed
@@ -230,6 +230,24 @@ Resources:
             - iframely.dualstack.infrast-alb-glmluhy47jtg-1091895049.us-east-1.elb.amazonaws.com.prod.prx.tech.
           TTL: "3600"
           Type: CNAME
+
+  Embedded: # This is for embedded players
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      Comment: Embedded
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - "23.185.0.3"
+          TTL: "3600"
+          Type: A
+          Name: !Sub embedded.${Domain}
+        - ResourceRecords:
+            - 2620:12a:8000::3
+            - 2620:12a:8001::3
+          TTL: "3600"
+          Type: AAAA
+          Name: !Sub embedded.${Domain}
 
   ZenDesk:
     Type: AWS::Route53::RecordSetGroup
