Clean up listener rule syntax

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -142,7 +142,7 @@ Mappings:
       DovetailMemory: 2000
       DovetailMemoryReservation: 1000
   # Each app should be given a listener rule priority prefix between 1 and 500.
-  # In nested stacks, listener rule priorities are created by combining the
+  # In app stacks, listener rule priorities are created by combining the
   # prefix with exactly two more digits. This allows each app to have up to 99
   # rules per listener.
   #
@@ -150,31 +150,19 @@ Mappings:
   # reduce the number of rules evaluations needed for more common requests.
   #
   # The final rule priority values must be between 1 and 50000.
-  ALBListenerRulePriorityMap:
-    Play:
-      prefix: 11
-    Exchange:
-      prefix: 13
-    Augury:
-      prefix: 17
-    Cms:
-      prefix: 20
-    Id:
-      prefix: 24
-    Castle:
-      prefix: 26
-    Remix:
-      prefix: 29
-    Publish:
-      prefix: 31
-    Metrics:
-      prefix: 36
-    Styleguide:
-      prefix: 65
-    Networks:
-      prefix: 70
-    Iframely:
-      prefix: 73
+  SharedAlbListenerRulePriorityMap:
+    Play: { prefix: 11 }
+    Exchange: { prefix: 13 }
+    Augury: { prefix: 17 }
+    Cms: { prefix: 20 }
+    Id: { prefix: 24 }
+    Castle: { prefix: 26 }
+    Remix: { prefix: 29 }
+    Publish: { prefix: 31 }
+    Metrics: { prefix: 36 }
+    Styleguide: { prefix: 65 }
+    Networks: { prefix: 70 }
+    Iframely: { prefix: 73 }
 
 Resources:
   CustomResourcesStack:
@@ -319,31 +307,31 @@ Resources:
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         # Exchange
-        ExchangePlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Exchange, prefix]
+        ExchangePlatformALBListenerPriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Exchange, prefix]
         ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
         ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
         # Cms
-        CmsPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Cms, prefix]
+        CmsPlatformALBListenerPriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Cms, prefix]
         CmsEcrImageTag: !Ref CmsEcrImageTag
         CmsSecretsVersion: !Ref CmsSecretsVersion
         # Augury
-        AuguryPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Augury, prefix]
+        AuguryPlatformALBListenerPriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Augury, prefix]
         AuguryEcrImageTag: !Ref AuguryEcrImageTag
         AugurySecretsVersion: !Ref AugurySecretsVersion
         # Styleguide
-        StyleguidePlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Styleguide, prefix]
+        StyleguidePlatformALBListenerPriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Styleguide, prefix]
         StyleguideEcrImageTag: !Ref StyleguideEcrImageTag
         StyleguideSecretsVersion: !Ref StyleguideSecretsVersion
         # Remix
-        RemixPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
+        RemixPlatformALBListenerPriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Remix, prefix]
         RemixEcrImageTag: !Ref RemixEcrImageTag
         RemixSecretsVersion: !Ref RemixSecretsVersion
         # Networks
-        NetworksPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
+        NetworksPlatformALBListenerPriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Networks, prefix]
         NetworksEcrImageTag: !Ref NetworksEcrImageTag
         NetworksSecretsVersion: !Ref NetworksSecretsVersion
         # Iframely
-        IframelyPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Iframely, prefix]
+        IframelyPlatformALBListenerPriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Iframely, prefix]
         IframelyEcrImageTag: !Ref IframelyEcrImageTag
         IframelySecretsVersion: !Ref IframelySecretsVersion
       Tags:
@@ -805,7 +793,7 @@ Resources:
 
         CmsEcrImageTag: !Ref CmsEcrImageTag
         CmsSecretsVersion: !Ref CmsSecretsVersion
-        CmsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Cms, prefix]
+        CmsSharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Cms, prefix]
 
         DovetailCdnArrangerLambdaCodeS3ObjectKey: !Ref DovetailCdnArrangerCodeS3ObjectKey
         DovetailCdnArrangerCloudFrontOai: !Ref DovetailCdnArrangerCloudFrontOai
@@ -816,16 +804,16 @@ Resources:
 
         IdEcrImageTag: !Ref IdEcrImageTag
         IdSecretsVersion: !Ref IdSecretsVersion
-        IdSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Id, prefix]
+        IdSharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Id, prefix]
 
         IframelyEcrImageTag: !Ref IframelyEcrImageTag
         IframelySecretsVersion: !Ref IframelySecretsVersion
-        IframelySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Iframely, prefix]
+        IframelySharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Iframely, prefix]
 
         PlayEcrImageTag: !Ref PlayEcrImageTag
         PlaySecretsVersion: !Ref PlaySecretsVersion
         PlayProxyEcrImageTag: !Ref PlayProxyEcrImageTag
-        PlaySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Play, prefix]
+        PlaySharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Play, prefix]
 
         RadiotopiaTowerLambdaCodeS3ObjectKey: !Ref RadiotopiaTowerLambdaCodeS3ObjectKey
 
@@ -833,7 +821,7 @@ Resources:
 
         StyleguideEcrImageTag: !Ref StyleguideEcrImageTag
         StyleguideSecretsVersion: !Ref StyleguideSecretsVersion
-        StyleguideSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Styleguide, prefix]
+        StyleguideSharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Styleguide, prefix]
 
         TheWorldSearchGoogleCustomSearchEngineId: !Ref TheWorldSearchGoogleCustomSearchEngineId
         TheWorldSearchGoogleCustomSearchApiKey: !Ref TheWorldSearchGoogleCustomSearchApiKey
@@ -916,7 +904,7 @@ Resources:
 
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
-        CastleSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Castle, prefix]
+        CastleSharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Castle, prefix]
         CastleRdsPostgresqlEndpoint: !Ref CastleRdsPostgresqlEndpoint
         CastlePostgresUsername: !Ref CastlePostgresUsername
         CastlePostgresUserPassword: !Ref CastlePostgresUserPassword
@@ -925,22 +913,22 @@ Resources:
 
         ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
         ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
-        ExchangeSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Exchange, prefix]
+        ExchangeSharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Exchange, prefix]
 
         FeederEcrImageTag: !Ref FeederEcrImageTag
         FeederSecretsVersion: !Ref FeederSecretsVersion
 
         NetworksEcrImageTag: !Ref NetworksEcrImageTag
         NetworksSecretsVersion: !Ref NetworksSecretsVersion
-        NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
+        NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Networks, prefix]
 
         PublishEcrImageTag: !Ref PublishEcrImageTag
         PublishSecretsVersion: !Ref PublishSecretsVersion
-        PublishSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Publish, prefix]
+        PublishSharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Publish, prefix]
 
         RemixEcrImageTag: !Ref RemixEcrImageTag
         RemixSecretsVersion: !Ref RemixSecretsVersion
-        RemixSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
+        RemixSharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Remix, prefix]
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -1005,7 +993,7 @@ Resources:
 
         AuguryEcrImageTag: !Ref AuguryEcrImageTag
         AugurySecretsVersion: !Ref AugurySecretsVersion
-        AugurySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Augury, prefix]
+        AugurySharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Augury, prefix]
 
         DovetailAnalyticsLambdaCodeS3ObjectKey: !Ref AnalyticsIngestLambdaCodeS3ObjectKey
 
@@ -1014,7 +1002,7 @@ Resources:
 
         MetricsEcrImageTag: !Ref MetricsEcrImageTag
         MetricsSecretsVersion: !Ref MetricsSecretsVersion
-        MetricsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Metrics, prefix]
+        MetricsSharedAlbListenerRulePriorityPrefix: !FindInMap [SharedAlbListenerRulePriorityMap, Metrics, prefix]
 
         ProxyLambdaCodeS3ObjectKey: !Ref ProxyPrxOrgCodeS3ObjectKey
       Tags:
