--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -49,7 +49,7 @@ Parameters:
     AllowedPattern: ^(10|172|192).[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}\/16$
     ConstraintDescription: >-
       must be a /16 private network
-  DovetailRedisHostname: { Type: String }
+  DovetailRedisHostname: { Type: String } # TODO Still need this?
   PorterJobExecutionSnsTopicArn: { Type: String }
   # Application Specific
   AuguryEcrImageTag: { Type: String }
