--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -1,4 +1,10 @@
 # stacks/apps/cms.yml
+#
+# The names of the SQS queues created by this template are intended to
+# implicitly match some configuration that exists within the CMS application.
+# The only part of the queue names that is passed to the application is the
+# prefix; if the stems change in other the template or the app config, things
+# will not function as expected.
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
