Add Exchange SQS queues

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -225,6 +225,7 @@ Resources:
         SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
+        AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
