--- a/stacks/shared-announce.yml
+++ b/stacks/shared-announce.yml
@@ -791,22 +791,22 @@ Resources:
   ##############################################################################
   # This queue is not used by Announce, but it
   ##############################################################################
-  # EmailNetworkQueue:
-  #   Type: AWS::SQS::Queue
-  #   Properties:
-  #     DelaySeconds: 0
-  #     MessageRetentionPeriod: 345600 # 4 days
-  #     QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}EmailNetwork
-  #     ReceiveMessageWaitTimeSeconds: 0
-  #     Tags:
-  #       - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-  #       - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-  #       - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-  #       - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-  #       - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-  #       - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-  #       - { Key: prx:dev:application, Value: Exchange }
-  #     VisibilityTimeout: 5400 # 1.5 hour
+  EmailNetworkQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      DelaySeconds: 0
+      MessageRetentionPeriod: 345600 # 4 days
+      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}EmailNetwork
+      ReceiveMessageWaitTimeSeconds: 0
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Exchange }
+      VisibilityTimeout: 5400 # 1.5 hour
 
 Outputs:
   ResourcePrefix:
