--- a/stacks/shared-announce.yml
+++ b/stacks/shared-announce.yml
@@ -789,7 +789,9 @@ Resources:
         - { Key: prx:dev:application, Value: Feeder }
       VisibilityTimeout: 30
   ##############################################################################
-  # This queue is not used by Announce, but it
+  # This queue is not used by Announce, but it is shared by Exchange and
+  # Networks, so it's being created here to avoid potential circular
+  # dependencies.
   ##############################################################################
   EmailNetworkQueue:
     Type: AWS::SQS::Queue
