Add SQS prefix to new Exchange environment

--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -320,6 +320,8 @@ Resources:
               Value: !GetAtt SesSendingSmtpCredentials.UserName
             - Name: SMTP_PASSWORD
               Value: !GetAtt SesSendingSmtpCredentials.Password
+            - Name: SQS_PREFIX
+              Value: !Ref AnnounceResourcePrefix
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -425,6 +427,8 @@ Resources:
               Value: !GetAtt SesSendingSmtpCredentials.UserName
             - Name: SMTP_PASSWORD
               Value: !GetAtt SesSendingSmtpCredentials.Password
+            - Name: SQS_PREFIX
+              Value: !Ref AnnounceResourcePrefix
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -643,6 +647,8 @@ Resources:
               Value: !GetAtt SesSendingSmtpCredentials.UserName
             - Name: SMTP_PASSWORD
               Value: !GetAtt SesSendingSmtpCredentials.Password
+            - Name: SQS_PREFIX
+              Value: !Ref AnnounceResourcePrefix
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
