--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -166,10 +166,10 @@ Resources:
             Statement:
               - Action: sqs:*
                 Effect: Allow
-                Resource: !Sub arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}_${EnvironmentTypeAbbreviation}*
+                Resource: !Sub arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}*
               - Action: sns:*
                 Effect: Allow
-                Resource: !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}_${EnvironmentTypeAbbreviation}*
+                Resource: !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}*
             Version: "2012-10-17"
           PolicyName: Announce
         - PolicyDocument:
@@ -196,7 +196,7 @@ Resources:
                   - s3:Put*
                   - s3:RestoreObject
                 Effect: Allow
-                Resource: # Turn these into root stack paramters
+                Resource: # TODO Turn these into root stack paramters
                   - !If [IsProduction, arn:aws:s3:::prx-feed/*, arn:aws:s3:::staging-prx-feed/*]
                   - !If [IsProduction, arn:aws:s3:::prx-feed, arn:aws:s3:::staging-prx-feed]
             Version: "2012-10-17"
