--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -164,10 +164,10 @@ Resources:
           PolicyName: JobQueues
         - PolicyDocument:
             Statement:
-              - Action: sqs:*
+              - Action: sqs:* # TODO Seems very permissive
                 Effect: Allow
                 Resource: !Sub arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}*
-              - Action: sns:*
+              - Action: sns:* # TODO Seems very permissive
                 Effect: Allow
                 Resource: !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}*
             Version: "2012-10-17"
@@ -180,7 +180,7 @@ Resources:
                   - s3:ListBucket
                   - s3:ListAllMyBuckets
                 Effect: Allow
-                Resource: "*"
+                Resource: "*" # TODO Seems very permissive
             Version: "2012-10-17"
           PolicyName: S3ReadOnly
         - PolicyDocument:
