Add Glue and Athena permissions

--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -688,6 +688,12 @@ Resources:
               - Action: lambda:*
                 Effect: Allow
                 Resource: "*"
+              - Action: glue:*
+                Effect: Allow
+                Resource: "*"
+              - Action: athena:*
+                Effect: Allow
+                Resource: "*"
               - Action: cloudformation:*
                 Effect: Allow
                 Resource: !Sub arn:aws:cloudformation:${AWS::Region}:aws:transform/Serverless-2016-10-31
